[package]
name = "id-library-showcase"
version = "0.1.0"
edition = "2018"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { version = "*", path = "../deps/concordium-rust-sdk/"}
tokio = { version = "1.5.0", features = ["full"] }
tonic = "0.4.2"
anyhow = "1.0"
serde_json = "1.0.60"
serde = "1.0"
rand = "=0.7"
dialoguer = "0.8"
pairing = "0.15"
rpassword = "5.0"

structopt = "0.3"
clap = "2.33.3"

[build-dependencies]
tonic-build = "0.4"