[package]
name = "memo-via-smart-contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
structopt = "0.3"
clap = "2.33"
anyhow = "1"
tokio = {version = "1.8", features = ["full"]}
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
env_logger = "0.9"
log = "0.4"
thiserror = "1"
url = "2.2"

[dependencies.concordium-rust-sdk]
path = "../deps/concordium-rust-sdk"
version = "*"
features = ["postgres"]