[package]
name = "nft-client"
version = "0.1.0"
edition = "2018"

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk", version = "*" }
anyhow = "1"
tokio = {version = "1.8", features = ["full"]}
thiserror = "1.0.28"
structopt = "0.3.23"
clap = "2.33.3"
hex = "0.4.3"
serde = "1.0.130"
serde_json = "1.0.67"
chrono = "0.4.19"
futures = "0.3.17"
tokio-postgres = "0.7.2"
